Fix top padding on mobile

--- a/css/queries.css
+++ b/css/queries.css
@@ -38,6 +38,7 @@
   body {
     flex-direction: column;
     min-height: 100vh;
+    padding: 2.4rem;
   }
 
   main {
